# CSD2

./: .gitignore  <class 'str'>.midi  CMakeLists.txt  Gregory_Taylor.pages  THEDOG.midi  Whatadogsequencer.midi  arnoudloonstra.md  beoordelingsformulier_student_CSD2a.numbers  csd1  csd2.0  event_lists.midi  events_lists.midi  les 4ofzo.pages  les 5.pages  python theorie 10 sept  readme.txt
2a/DSP/: delay_line.py  iirW.py
2a/python_basics/EINDOPDRACHT_folder/: EINDOPDRACHT.py
2a/python_basics/audio_cat/: Audio_categorising.py
2a/python_basics/eventseq/: eventSeq.py
2a/python_basics/playsound/: playsound.py
2b/: CMakeLists.txt
2b/Eindopdracht/presentatiefiles/: scarysynth.pages
2b/opdrachten/: CMakeLists.txt
2b/opdrachten/Eindopdracht_theScarySynth/: CMakeLists.txt  UIUtility.cpp  UIUtility.h  additiveSynth.cpp  audioToFile.cpp  callback.cpp  (+10 more)
2b/test/testclass1/: CMakeLists.txt  bookcase.cpp  bookcase.h
2c/: CMakeLists.txt  eindopdrachtsession  systemenProeven.cpp
2c/TOOLBELT/: CMakeLists.txt
2c/assignments/: .CMakeLists.txt.swn  CMakeLists.txt
2c/codingClinics/: CMakeLists.txt
2c/eindopdracht/: :w  CMakeLists.txt  MinimalVialbleProduct.txt  WaveShaper.cpp  callback.cpp  callback.h  circBuffer.cpp  circBuffer.h  delay.cpp  delay.h  effect.cpp  readme.md  rms.cpp  timestretcher.cpp  timestretcher.h  tremolo.cpp  tremolo.h  uiutility.cpp  uiutility.h  waveshaper.h
2c/test/: CMakeLists.txt  tremolo.h
2cII/: CMakeLists.txt  concept.md  design.md  upload.sh
2cII/code/: CMakeLists.txt  elecfluteHtml
2cII/code/elecfluteCodeV1/: CMakeLists.txt  WaveShaper.cpp  allPass.cpp  allPass.h  callback.cpp  callback.h  circBuffer.cpp  circBuffer.h  config.h  delay.cpp  delay.h  effect.h  main.cpp  onePole.cpp  onePole.h  readme.md  reverb.cpp  reverb.h  waveshaper.h
2cII/code/elecfluteCodeV1/tools/: osc.h  osc_server.h  uiutility.cpp  uiutility.h
2cII/documentatie/: diagrams.md  documentatie0.1.md
2cII/presentatie/: allpass effect diagram.drawio  delay class diagram.drawio  flow and system.drawio  reverb class diagram.drawio
2cII/prototype/: prototype live.pd  prototype.pd  voice.m4a
2d/: concept1.md
2d/01_eindopdracht_Version0.5/: motifPlayer.js
2d/02_eindopdracht_Final-version/: ftAnaliser.js  index.html  motifPlayer.js  pitchadder.py  starsForGoodBehavior.js
2d/eindopdracht/: index.html  pitchDetection.js  server.js  style.css  videoChanger.js
2d/eindopdracht2/: ftAnaliser.js  index.html  motifPlayer.js  readme.md  style.css  twoWeekDayPlan.md  videoChanger.js
2d/micTest/: ftAnaliser.js  index.html
2d/test/: midiToTxt.py  motifs-Flute.txt  reflection19may.md
csd2a/: Untitled.pages  beoordelingsformulier_student_CSD2a.ods  beoordelingsformulier_student_CSD2a.xlsx
csd2a/DSP/: firW.py
csd2a/python_basics/: les4.py  rhytminput
csd2b/opdrachten/: CMakeLists.txt
csd2b/opdrachten/soundingSynth/: CMakeLists.txt  UIUtility.cpp  UIUtility.h  additiveSynth.cpp  additiveSynth.h  applicationController.cpp  applicationController.h  audioToFile.h  callback.cpp  callback.h  main.cpp  melody.cpp  organSynth.cpp  organSynth.h  oscillator.cpp  oscillator.h  output.csv  saw.cpp  saw.h  sine.h  square.cpp  square.h  synth.cpp  synth.h  synthcsd2b.code-workspace
csd2c/codingClinics/: circBuffer.cpp  circBuffer.h
csd2c/test/: tremolo.cpp
presentaties/: 4 minuten.key  <class 'str'>.midi
projects/: ComplexPlot.py
python_basics/: euclidean rhhythms.js  eventSeq.py  helloworld.py  playsound.py  rhytmische playback.py  single_sample_sequencer
python_basics/EIDNDOPDRACHT/: EINDOPDRACHT.py
python_basics/Ffolder/: EINDOPDRACHT.py
python_basics/audio_cat/: Audio_categorising.py
python_basics/ciskavriezenga CSD_24-25 main blok2a-session4/: 4f_userinput.py
python_basics/eventseq/: eventSeq.py
(+181 files in other folders)
